# fsh-viewer

./: .gitmodules  CMakeLists.txt  README.md  fsh-viewer.desktop  fsh.thumbnailer  fsh.xml
.github/workflows/: build.yml
src/: main.cpp
